# partitionlib

./: Cargo.toml  TODO
resources/: disk_mbr.img
src/: lib.rs  mbr.rs  partition.rs
tests/: test.rs
